test_regress/t/t_hier_block0_bad.out
%Error: t/t_hier_block0_bad.v:25:42: Cannot access inside hierarchical block
   25 |       $display("%d %d %d", count, i_sub0.ff, out1);
      |                                          ^~
%Error: Exiting due to
